fix cards home page align and size

--- a/style.css
+++ b/style.css
@@ -1044,12 +1044,14 @@ ul {
   padding: 20px 30px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: flex-start;
   flex: 1;
   border-radius: inherit;
 }
 .blocks-item-link img {
   padding-bottom: 20px;
+  width: 120px;
 
 }
 
